--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "dqflex",
+  "name": "recommendemo",
   "version": "1.0.0",
   "private": true,
-  "homepage": "YOUR-GITHUB-PAGES-URL",
+  "homepage": "http://recommendemo.pages.dev",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
